proj1/tests/other-tests/oskis-angels_tests/error/function_no_colon.py
def f()
    return 50
